syntax = "proto3";
package aioz.staking.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "aioz/staking/v1beta1/staking.proto";

option go_package = "github.com/AIOZNetwork/go-aioz/x/staking/types";

// Query defines the gRPC querier service.
service Query {

  // Parameters queries the staking parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/aioz/staking/v1beta1/params";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {

  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}
